--- a/index.html
+++ b/index.html
@@ -9,36 +9,23 @@
     <title>Document</title>
 </head>
 <body>
-    <my-heading jsonld="">
+    <my-heading>
         No special skills required
     </my-heading>
     <my-paragraph>
         Do you think that website development is something that requires professional technical expertise? Using our site builder, you can make a great website regardless of your prior experience in the field. All you need is select the desired page elements and arrange them the way you want.
     </my-paragraph>
     <script src="./index.js" type="module"></script>
-    <script type="application/ld+json">
-        {
-            "@context": "https://schema.org",
-            "@type": "Article",
-            "mainEntityOfPage": {
-                "@type": "WebPage",
-                "@id": "https://google.com/article"
-            },
-            "headline": "valera",
-            "publisher": {
-                "@type": "Organization",
-                "name": "Google"
-            },
-            "description": "A most wonderful article"
-        }
-    </script>
-    <script>
-	    window.addEventListener('load', function() {
-		    const jsonld = JSON.parse(
-			    document.querySelector(
-				    'script[type="application/ld+json"]').innerText);
-			    document.querySelector('my-heading').jsonld = jsonld;
-	    });
-    </script>
+<!--    <script type="application/ld+json">-->
+<!--        -->
+<!--    </script>-->
+<!--    <script>-->
+<!--	    window.addEventListener('load', function() {-->
+<!--		    const jsonld = JSON.parse(-->
+<!--			    document.querySelector(-->
+<!--				    'script[type="application/ld+json"]').innerText);-->
+<!--			    document.querySelector('my-heading').jsonld = jsonld;-->
+<!--	    });-->
+<!--    </script>-->
 </body>
 </html>
