add jsonld as attribute

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Document</title>
 </head>
 <body>
-    <my-heading>
+    <my-heading json-ld>
         No special skills required
     </my-heading>
     <my-paragraph>
