--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="description" content="my builder">
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
@@ -12,6 +13,7 @@
 <my-heading jsonld="">
     No special skills required
 </my-heading>
+<h2>Hello world</h2>
 <my-paragraph>
     Do you think that website development is something that requires professional technical expertise? Using our site
     builder, you can make a great website regardless of your prior experience in the field. All you need is select the
